--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                               allowfullscreen>
                             </iframe> -->
-                            <img src="assets/img/thumb/pln-kalselteng.jpg" alt="">
+                            <img src="assets/img/thumb/pln-kalselteng.webp" alt="">
                             <button style="background: none; border: none;" class="play"
                               data-url='https://www.youtube.com/embed/A1J8Sagl64s'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
@@ -263,7 +263,7 @@
                               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                               allowfullscreen>
                             </iframe> -->
-                            <img src="assets/img/thumb/pln-kotabaru.jpg" alt="">
+                            <img src="assets/img/thumb/pln-kotabaru.webp" alt="">
                             <button style="background: none; border: none;" class="play"
                               data-url='https://www.youtube.com/embed/vFUURjsY17E'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
@@ -283,7 +283,7 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <img src="assets/img/thumb/pln-batulicin.jpg" alt="">
+                            <img src="assets/img/thumb/pln-batulicin.webp" alt="">
                             <button style="background: none; border: none;" class="play"
                               data-url='https://drive.google.com/file/d/1Y-pdVIoiXGjyh_QPHJfa4fy3Zpx7HMuT/preview'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
@@ -299,7 +299,7 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <img src="assets/img/thumb/pln-satui.jpg" alt="">
+                            <img src="assets/img/thumb/pln-satui.webp" alt="">
                             <button style="background: none; border: none;" class="play"
                               data-url='https://drive.google.com/file/d/1nM3rWRcitzPLf5nwrW_mBSTERwfw26Sk/preview'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
@@ -320,7 +320,7 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <img src="assets/img/thumb/pancasila.jpg" alt="">
+                            <img src="assets/img/thumb/pancasila.webp" alt="">
                             <button style="background: none; border: none;" class="play"
                               data-url='https://drive.google.com/file/d/1wsvajcV4ZkWy9PqGr4Q8Y1Tcy2B5p8fy/preview'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
@@ -336,7 +336,7 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <img src="assets/img/thumb/pln-cfh.jpg" alt="">
+                            <img src="assets/img/thumb/pln-cfh.webp" alt="">
                             <button style="background: none; border: none;" class="play"
                               data-url='https://drive.google.com/file/d/1Qt9BKsMDy51eUlM39hc0MLXW-lCvj7vf/preview'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
@@ -357,7 +357,7 @@
                       <div class="col-md-6 mb-4">
                         <div class="card h-100 shadow card-span btn-animate">
                           <div class="ratio ratio-16x9">
-                            <img src="assets/img/thumb/covid.jpg" alt="">
+                            <img src="assets/img/thumb/covid.webp" alt="">
                             <button style="background: none; border: none;" class="play"
                               data-url='https://drive.google.com/file/d/17TOkNKxANRYUeOdlg4cYnmURP9_JF0NA/preview'><i
                                 class="bi bi-play-fill text-white fs-7"></i>
@@ -886,233 +886,6 @@
                 </div>
               </div>
             </div>
-
-
-
-
-
-
-            <!-- <div class="carousel slide" id="carouselCountries" data-bs-ride="carouseloff">
-              <div class="carousel-inner portfolio">
-                <div class="carousel-item active" data-bs-interval="false">
-                  <div class="row h-100 justify-content-center mx-1">
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/ml.png" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/ml.png" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Machine Learning
-                            untuk
-                            Pemula
-                            <br>
-                            <span class="fs--1 text-gray-100">DICODING CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/pp.png" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/pp.png" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Microsoft Office
-                            Specialist
-                            <br>
-                            <span class="fs--1 text-gray-100">MICROSOFT CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/animasi.jpg" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/animasi.jpg" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Lomba
-                            Animasi
-                            Nasional
-                            <br>
-                            <span class="fs--1 text-gray-100">15 TERBAIK</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="false">
-                  <div class="row h-100 justify-content-center mx-1">
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/py.png" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/py.png" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Introduction to
-                            Data Science
-                            with Python
-                            <br>
-                            <span class="fs--1 text-gray-100">DQLAB CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/r.png" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/r.png" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Introduction to
-                            Data Science
-                            with R
-                            <br>
-                            <span class="fs--1 text-gray-100">DQLAB CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/excel.png" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/excel.png" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Free Trial
-                            Excel
-                            <br>
-                            <span class="fs--1 text-gray-100">DQLAB CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="false">
-                  <div class="row h-100 justify-content-center mx-1">
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/pln.png" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/pln.png" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">
-                            PLN Competition From Home
-                            <br>
-                            <span class="fs--1 text-gray-100">JUARA 3</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/pena.jpg" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/pena.jpg" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Pekan Ilmiah
-                            dan Penalaran Mahasiswa
-                            <br>
-                            <span class="fs--1 text-gray-100">JUARA 2</span>
-                          </a>
-                          <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/infografis.jpg" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/infografis.jpg" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Lomba Literasi
-                            Smart
-                            City
-                            <br>
-                            <span class="fs--1 text-gray-100">JUARA 1</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="false">
-                  <div class="row h-100 justify-content-center mx-1">
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/cp-js.jpg" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/cp-js.jpg" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">JavaScript
-                            Dasar
-                            <br>
-                            <span class="fs--1 text-gray-100">CODEPOLITAN CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/cp-async.jpg" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/cp-async.jpg" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">JavaScript Async
-                            <br>
-                            <span class="fs--1 text-gray-100">CODEPOLITAN CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/cp-jquery.jpg" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/cp-jquery.jpg" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">JQuery
-                            Dasar
-                            <br>
-                            <span class="fs--1 text-gray-100">CODEPOLITAN CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="false">
-                  <div class="row h-100 justify-content-center mx-1">
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/cp-py.jpg" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/cp-py.jpg" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Pemrograman
-                            Python
-                            <br>
-                            <span class="fs--1 text-gray-100">CODEPOLITAN CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-artikel">
-                      <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                        <img src="assets/img/arc/cp-html-css.jpg" class="img-fluid rounded-border" alt="">
-                        <div class="portfolio-links">
-                          <a href="assets/img/arc/cp-html-css.jpg" data-gallery="portfolioGallery"
-                            class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">HTML & CSS
-                            <br>
-                            <span class="fs--1 text-gray-100">CODEPOLITAN CERTIFIED</span>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row mt-3 mb-7 flex-center">
-                <div class="col-auto position-relative z-index-2">
-                  <ol class="carousel-indicators">
-                    <li class="active mx-2" data-bs-target="#carouselCountries" data-bs-slide-to="0"></li>
-                    <li class="mx-2" data-bs-target="#carouselCountries" data-bs-slide-to="1"></li>
-                    <li class="mx-2" data-bs-target="#carouselCountries" data-bs-slide-to="2"></li>
-                    <li class="mx-2" data-bs-target="#carouselCountries" data-bs-slide-to="3"></li>
-                    <li class="mx-2" data-bs-target="#carouselCountries" data-bs-slide-to="4"></li>
-                  </ol>
-                </div>
-              </div>
-            </div> -->
           </div>
         </div>
       </div><!-- end of .container-->
