--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
         <div class="row flex-center h-100 mb-5">
           <div class="col-xl-9">
-            <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="2000">
+            <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="1500">
               <div class="col-md-4 mb-4">
                 <div class="card h-100 shadow card-span btn-animate"><img class="card-img-top"
                     src="assets/img/web/jme.webp" alt="news" />
@@ -401,7 +401,7 @@
                 </div>
               </div>
 
-              <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="2000">
+              <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="1500">
                 <!-- ========================== -->
                 <!-- POSTER -->
                 <!-- ========================== -->
@@ -1082,28 +1082,35 @@
 
 
   <script>
+    //STOP SCROLL
+    function disableScroll() {
+      document.body.classList.add("stop-scrolling");
+    }
+
+    function enableScroll() {
+      document.body.classList.remove("stop-scrolling");
+    }
+
+    disableScroll()
+
     $(document).ready(function () {
 
+      //LOADER
       $(window).load(function () {
         $(".loader").fadeOut(700);
+        enableScroll()
       });
 
       width = $(document).width()
       // console.log(width)
       if (width < 990) {
-        console.log('asdsa')
         setTimeout(function () {
           document.getElementById('ilustrasi-active').click();
           //your code to be executed after 1 second
-        }, 3000);
+        }, 5000);
       }
 
-
-
-
-
-
-
+      //BUTTON TO TOP
       //Get the button
       let mybutton = document.getElementById("btn-back-to-top");
 
@@ -1129,10 +1136,9 @@
         document.body.scrollTop = 0;
         document.documentElement.scrollTop = 0;
       }
-
-
-
     });
+
+
 
 
     $(".galeri-carousel").owlCarousel({
