--- a/index.html
+++ b/index.html
@@ -199,21 +199,21 @@
         <div class="row flex-center h-100 mb-5">
           <div class="col-xl-9">
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="1500">
-              <div class="col-md-4 mb-4">
+              <div class="col-md-6 mb-4">
                 <div class="card h-100 shadow card-span btn-animate"><img class="card-img-top"
                     src="assets/img/web/jme.webp" alt="news" />
                   <div class="card-body">
-                    <h5 class="fs-lg-1 my-3">Website Jurnalis Murakata Ekstensia PERHIPTANI Kab. Hulu Sungai Tengah
+                    <h5 class="fs-lg-0 my-3">Website Jurnalis Murakata Ekstensia PERHIPTANI Kab. Hulu Sungai Tengah
                     </h5>
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 mb-4">
+              <div class="col-md-6 mb-4">
                 <a href="https://admisiprofesi.ulm.ac.id" class="text-decoration-none" target="_blank">
                   <div class=" card h-100 shadow card-span btn-animate">
                     <img class="card-img-top" src="assets/img/web/admisi.webp" alt="news" />
                     <div class="card-body">
-                      <h5 class="fs-lg-1 my-3">Admisi Profesi Universitas Lambung Mangkurat</h5>
+                      <h5 class="fs-lg-0 my-3">Admisi Profesi Universitas Lambung Mangkurat</h5>
                     </div>
                   </div>
                 </a>
@@ -228,14 +228,14 @@
           </div>
         </div>
         <div class="row flex-center h-100 mb-5">
-          <div class="col-xl-9">
+          <div class="col-xl-10">
             <div class="owl-carousel owl-theme galeri-carousel mb-5 owl-loaded owl-drag">
               <div class="owl-stage-outer">
                 <div class="owl-stage">
                   <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
                     <div class="row px-lg-5 mb-2" data-aos="fade-up" data-aos-delay="1500">
                       <div class="col-md-6 mb-4">
-                        <div class="card h-100 shadow card-span btn-animate mb-3">
+                        <div class="card h-100 card-gray card-span btn-animate mb-3">
                           <div class="ratio ratio-16x9">
                             <!-- <iframe src="https://www.youtube.com/embed/A1J8Sagl64s" title="YouTube video player"
                               frameborder="0"
@@ -251,12 +251,12 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill   me-1"></i>PLN UIW
                               Kalselteng</span>
-                            <h5 class="fs-lg-1 my-3">New PLN Mobile - PT PLN (Persero) UIW Kalselteng</h5>
+                            <h5 class="fs-lg-0 my-3">New PLN Mobile - PT PLN (Persero) UIW Kalselteng</h5>
                           </div>
                         </div>
                       </div>
                       <div class="col-md-6 mb-4">
-                        <div class="card h-100 shadow card-span btn-animate">
+                        <div class="card h-100 card-gray card-span btn-animate">
                           <div class="ratio ratio-16x9">
                             <!-- <iframe src="https://www.youtube.com/embed/vFUURjsY17E" title="YouTube video player"
                               frameborder="0"
@@ -272,7 +272,7 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>PLN UP3
                               Kotabaru</span>
-                            <h5 class="fs-lg-1 my-3">Safety Induction - PT PLN (Persero) UP3 Kotabaru</h5>
+                            <h5 class="fs-lg-0 my-3">Safety Induction - PT PLN (Persero) UP3 Kotabaru</h5>
                           </div>
                         </div>
                       </div>
@@ -292,7 +292,7 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>PLN ULP
                               Batulicin</span>
-                            <h5 class="fs-lg-1 my-3">Safety Induction - PT PLN (Persero) ULP Batulicin</h5>
+                            <h5 class="fs-lg-0 my-3">Safety Induction - PT PLN (Persero) ULP Batulicin</h5>
                           </div>
                         </div>
                       </div>
@@ -308,7 +308,7 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>PLN ULP
                               Satui</span>
-                            <h5 class="fs-lg-1 my-3">Safety Induction - PT PLN (Persero) ULP Satui
+                            <h5 class="fs-lg-0 my-3">Safety Induction - PT PLN (Persero) ULP Satui
                             </h5>
                           </div>
                         </div>
@@ -329,7 +329,7 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>PUSPEKA
                               Kemdikbud</span>
-                            <h5 class="fs-lg-1 my-3">Hari Lahir Pancasila</h5>
+                            <h5 class="fs-lg-0 my-3">Hari Lahir Pancasila</h5>
                           </div>
                         </div>
                       </div>
@@ -345,7 +345,7 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>PLN UIW
                               Kalselteng</span>
-                            <h5 class="fs-lg-1 my-3">Peran Listrik Ditengah Pandemi
+                            <h5 class="fs-lg-0 my-3">Peran Listrik Ditengah Pandemi
                             </h5>
                           </div>
                         </div>
@@ -366,7 +366,7 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>Universitas Gadjah
                               Mada</span>
-                            <h5 class="fs-lg-1 my-3">Pandemi Covid-19</h5>
+                            <h5 class="fs-lg-0 my-3">Pandemi Covid-19</h5>
                           </div>
                         </div>
                       </div>
@@ -576,7 +576,7 @@
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill   me-1"></i>Statistika
                               FMIPA
                               ULM</span>
-                            <h5 class="fs-lg-1 my-3">Profil Program Studi Statistika FMIPA Universitas Lambung
+                            <h5 class="fs-lg-0 my-3">Profil Program Studi Statistika FMIPA Universitas Lambung
                               Mangkurat
                             </h5>
                           </div>
@@ -594,7 +594,7 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>Statistika FMIPA
                               ULM</span>
-                            <h5 class="fs-lg-1 my-3">Pengabdian Kepada Masyarakat Prodi Statistika FMIPA ULM -
+                            <h5 class="fs-lg-0 my-3">Pengabdian Kepada Masyarakat Prodi Statistika FMIPA ULM -
                               Vaksinasi
                               Skala Mikro di Kec. Cempaka</h5>
                           </div>
@@ -616,7 +616,7 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>Bank Indonesia
                               Kalsel</span>
-                            <h5 class="fs-lg-1 my-3">
+                            <h5 class="fs-lg-0 my-3">
                               QRIS - Quick Response Indonesia Standard</h5>
                           </div>
                         </div>
@@ -633,7 +633,7 @@
                           <div class="card-body">
                             <span class="fs--1 text-primary"><i class="bi bi-bookmark-fill me-1"></i>BPS Kota
                               Banjarbaru</span>
-                            <h5 class="fs-lg-1 my-3">Sensus Penduduk 2020</h5>
+                            <h5 class="fs-lg-0 my-3">Sensus Penduduk 2020</h5>
                           </div>
                         </div>
                       </div>
