--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
       <div class="container">
         <div class="row align-items-center min-vh-md-75 mt-7">
           <div class="col-md-7 col-lg-7 py-6 text-sm-start text-center">
-            <img src="assets/img/gallery/pp.jpg" class="rounded-circle img-thumbnail" id="fp" alt="" width="150">
+            <!-- <img src="assets/img/gallery/pp.jpg" class="rounded-circle img-thumbnail" id="fp" alt="" width="150"> -->
+            <img src="assets/img/gallery/a-01.png" id="fp" alt="" width="200">
             <p class="fs-1 fs-lg-3 lh-1 text-primary mt-3 mb-0 mt-lg-7 mb-sm-0 pt-lg-4"><span
                 class="fw-semi-bold">Hello</span>
               saya</p>
@@ -156,13 +157,13 @@
               <div class="col-md-3 text-center zoom service mb-4 wow fadeInUp" data-wow-delay="0.3s">
                 <i class="bi bi-pencil-square fs-5"></i>
                 <p class="fs-lg-0 fw-light ">
-                  Motion Graphic Designer
+                  Motion Graphics Designer
                 </p>
               </div>
               <div class="col-md-3 text-center zoom service mb-4 wow fadeInUp" data-wow-delay="0.5s">
                 <i class="bi bi-vector-pen fs-5"></i>
                 <p class="fs-lg-0 fw-light ">
-                  Graphic Designer
+                  Graphics Designer
                 </p>
               </div>
               <div class="col-md-3 text-center zoom service mb-4 wow fadeInUp" data-wow-delay="0.7s">
@@ -231,18 +232,51 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-lg-7 mx-auto text-center mb-4">
+              <h4 class="fw-light fs-3 mb-3 fw-bold wow fadeInUp mt-5" data-wow-delay="0.5s">Machine Learning</h4>
+            </div>
+          </div>
+          <div class="row flex-center h-100 mb-5">
+            <div class="col-xl-9">
+              <div class="row justify-content-center">
+                <div class="col-md-6 mb-4 wow fadeInUp" data-wow-delay="0.1s">
+                  <div class="card card-gray h-100 card-span btn-animate rounded-border"><img class="card-img-top"
+                      src="assets/img/ml/asma.jpg" alt="news" />
+                    <div class="card-body">
+                      <h5 class="fs-lg-0 my-3">Aplikasi Diagnosis Penyakit Asma Menggunakan XGBoost
+                      </h5>
+                      <a class="btn btn-lg ps-0 pe-3 text-primary" href="https://mryanafz.github.io/diagnosis-asma/"
+                        target="__blank">Kunjungi situs
+                        <i class="bi bi-arrow-right"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 mb-4 wow fadeInUp" data-wow-delay="0.3s">
+                  <div class=" card card-gray h-100 card-span btn-animate rounded-border">
+                    <img class="card-img-top" src="assets/img/ml/tweet.jpg" alt="news" />
+                    <div class="card-body">
+                      <h5 class="fs-lg-0 my-3">Aplikasi Sentimen Analisis Untuk Tweet Tentang Vaksin Covid-19</h5>
+                      <p class="text-primary">Coming Soon <i class="bi bi-hourglass-split"></i></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
           <path fill="#717cff" fill-opacity="1"
             d="M0,192L48,176C96,160,192,128,288,128C384,128,480,160,576,181.3C672,203,768,213,864,192C960,171,1056,117,1152,117.3C1248,117,1344,171,1392,197.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
           </path>
         </svg>
+
       </div>
       <div id="motion-graphic" style="background-color: #717cff;">
         <div class="container">
           <div class="row">
             <div class="col-lg-7 mx-auto text-center mb-4">
-              <h4 class="fw-light fs-3 mb-3 fw-bold wow fadeInUp text-white" data-wow-delay="0.1s">Motion Graphic</h4>
+              <h4 class="fw-light fs-3 mb-3 fw-bold wow fadeInUp text-white" data-wow-delay="0.1s">Motion Graphics</h4>
             </div>
           </div>
           <div class="row flex-center h-100">
@@ -601,7 +635,7 @@
                     <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
                       <div class="row px-lg-5 mb-2">
                         <div class="col-md-6 mb-4">
-                          <div class="card h-100 card-span btn-animate">
+                          <div class="card h-100 card-span btn-animate rounded-border">
                             <div class="ratio ratio-16x9">
                               <img src="assets/img/thumb/stat.jpg" alt="">
                               <button style="background: none; border: none;" class="play"
@@ -620,7 +654,7 @@
                           </div>
                         </div>
                         <div class="col-md-6 mb-4">
-                          <div class="card h-100 card-span btn-animate">
+                          <div class="card h-100 card-span btn-animate rounded-border">
                             <div class="ratio ratio-16x9">
                               <img src="assets/img/thumb/vaksin.jpg" alt="">
                               <button style="background: none; border: none;" class="play"
@@ -642,7 +676,7 @@
                     <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
                       <div class="row px-lg-5 mb-2">
                         <div class="col-md-6 mb-4">
-                          <div class="card h-100 card-span btn-animate">
+                          <div class="card h-100 card-span btn-animate rounded-border">
                             <div class="ratio ratio-16x9">
                               <img src="assets/img/thumb/qris.jpg" alt="">
                               <button style="background: none; border: none;" class="play"
@@ -659,7 +693,7 @@
                           </div>
                         </div>
                         <div class="col-md-6 mb-4">
-                          <div class="card h-100 card-span btn-animate">
+                          <div class="card h-100 card-span btn-animate rounded-border">
                             <div class="ratio ratio-16x9">
                               <img src="assets/img/thumb/sensus.jpg" alt="">
                               <button style="background: none; border: none;" class="play"
@@ -979,7 +1013,7 @@
                   <div class="card h-100 shadow card-span zoom">
                     <div class="card-body text-center pb-3 px-0">
                       <i class="bi bi-whatsapp fs-5 text-primary"></i>
-                      <p class="fw-normal mb-0 text-1000">085391024203</p>
+                      <p class="fw-normal mb-0 text-1000">+6285391024203</p>
                     </div>
                   </div>
                 </a>
