--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                   <div class="card card-gray h-100 card-span btn-animate rounded-border"><img class="card-img-top"
                       src="assets/img/web/jme.jpg" alt="news" />
                     <div class="card-body">
-                      <h5 class="fs-lg-0 my-3">Website Jurnalis Murakata Ekstensia PERHIPTANI Kab. Hulu Sungai Tengah
+                      <h5 class="fs-0 my-3">Website Jurnalis Murakata Ekstensia PERHIPTANI Kab. Hulu Sungai Tengah
                       </h5>
                     </div>
                   </div>
@@ -224,7 +224,7 @@
                     <div class=" card card-gray h-100 card-span btn-animate rounded-border">
                       <img class="card-img-top" src="assets/img/web/admisi.jpg" alt="news" />
                       <div class="card-body">
-                        <h5 class="fs-lg-0 my-3">Admisi Profesi Universitas Lambung Mangkurat</h5>
+                        <h5 class="fs-0 my-3">Admisi Profesi Universitas Lambung Mangkurat</h5>
                       </div>
                     </div>
                   </a>
@@ -244,7 +244,7 @@
                   <div class="card card-gray h-100 card-span btn-animate rounded-border"><img class="card-img-top"
                       src="assets/img/ml/asma.jpg" alt="news" />
                     <div class="card-body">
-                      <h5 class="fs-lg-0 my-3">Aplikasi Diagnosis Penyakit Asma Menggunakan XGBoost
+                      <h5 class="fs-0 my-3">Aplikasi Diagnosis Penyakit Asma Menggunakan XGBoost
                       </h5>
                       <a class="btn btn-lg ps-0 pe-3 text-primary" href="https://mryanafz.github.io/diagnosis-asma/"
                         target="__blank">Kunjungi situs
@@ -256,7 +256,7 @@
                   <div class=" card card-gray h-100 card-span btn-animate rounded-border">
                     <img class="card-img-top" src="assets/img/ml/tweet.jpg" alt="news" />
                     <div class="card-body">
-                      <h5 class="fs-lg-0 my-3">Aplikasi Sentimen Analisis Untuk Tweet Tentang Vaksin Covid-19</h5>
+                      <h5 class="fs-0 my-3">Aplikasi Sentimen Analisis Untuk Tweet Tentang Vaksin Covid-19</h5>
                       <p class="text-primary">Coming Soon <i class="bi bi-hourglass-split"></i></p>
                     </div>
                   </div>
@@ -736,7 +736,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-lg-7 mx-auto text-center my-5">
+          <div class="col-lg-7 mx-auto text-center mb-3">
             <h6 class="mb-2 text-uppercase fw-light fs-1  text-primary fw-bold wow fadeInUp" data-wow-delay="0.1s"
               id="archievments"><i class="bi bi-dash-lg wow fadeInUp" data-wow-delay="0.1s"></i>
               Archievments <i class="bi bi-dash-lg"></i></h6>
