--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
             <p class="mb-6 fs--1 fs-lg-1 lh-2">Web Developer, Motion Graphics Designer, Graphics Designer, Video Editor,
               Data
               Science & Machine Learning Enthusiast.</p>
-            <a class=" btn btn-lg btn-primary hover-top btn-glow" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Curriculum Vitae
+            <a class=" btn btn-lg btn-primary hover-top btn-glow"
+              href="https://drive.google.com/file/d/1HKYcMoZ-ac0QGcks7CWd_L5pQZ4SM6J0/view?usp=sharing"
+              target="_blank">Curriculum Vitae
               <svg class="bi bi-arrow-right-short ms-2" xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                 fill="currentColor" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
@@ -1087,7 +1088,7 @@
     </section>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -1095,11 +1096,9 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body text-center">
-            Coming Soon <i class="bi bi-emoji-smile fs-1"></i>
+            <img src="assets/img/gallery/cv.png" width="100%" alt="">
           </div>
           <div class=" modal-footer">
-            <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button> -->
           </div>
         </div>
       </div>
@@ -1107,7 +1106,7 @@
 
     <button type="button" class="btn btn-primary p-1 btn-animate" id="btn-back-to-top">
       <i class="bi bi-arrow-up"></i>
-    </button>
+    </button> -->
 
     <!-- <ul class="caption-style-1">
           <li>
