--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
           <div class="col-12 col-lg-auto mb-lg-0 wow fadeInUp" data-wow-delay="0.1s"><a
               class="d-flex align-items-center fw-semi-bold fs-3" href="#">
             </a>
-            <p class="my-3 text-100 fw-light">Banjarbaru, Kalimantan Selatan<br />
+            <p class="my-3 text-100 fw-light">Barabai, Kalimantan Selatan<br />
               <span class="fw-bold">Indonesia</span>
             </p>
           </div>
