--- a/index.html
+++ b/index.html
@@ -945,6 +945,19 @@
                       </div>
                       <div class="col-md-4 mb-4 px-5 px-md-3">
                         <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
+                          <img src="assets/img/arc/bisa-ml-sklearn.jpg" class="img-fluid rounded-border" alt="">
+                          <div class="portfolio-links">
+                            <a href="assets/img/arc/bisa-ml-sklearn.jpg" data-gallery="portfolioGallery"
+                              class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">Machine Learing
+                              dengan Scikit-Learn Python
+                              <br>
+                              <span class="fs--1 text-gray-100">BISA.AI CERTIFIED</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-4 px-5 px-md-3">
+                        <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
                           <img src="assets/img/arc/cp-html-css.jpg" class="img-fluid rounded-border" alt="">
                           <div class="portfolio-links">
                             <a href="assets/img/arc/cp-html-css.jpg" data-gallery="portfolioGallery"
@@ -955,7 +968,6 @@
                           </div>
                         </div>
                       </div>
-
                     </div>
                   </div>
                 </div>
@@ -1102,11 +1114,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <button type="button" class="btn btn-primary p-1 btn-animate" id="btn-back-to-top">
       <i class="bi bi-arrow-up"></i>
-    </button> -->
+    </button>
 
     <!-- <ul class="caption-style-1">
           <li>
