--- a/index.html
+++ b/index.html
@@ -258,7 +258,9 @@
                     <img class="card-img-top" src="assets/img/ml/tweet.jpg" alt="news" />
                     <div class="card-body">
                       <h5 class="fs-0 my-3">Aplikasi Sentimen Analisis Untuk Tweet Tentang Vaksin Covid-19</h5>
-                      <p class="text-primary">Coming Soon <i class="bi bi-hourglass-split"></i></p>
+                      <a class="btn btn-lg ps-0 pe-3 text-primary" href="https://mryanafz.github.io/sentimen-vaksin/"
+                        target="__blank">Kunjungi situs
+                        <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
