add certificate git

--- a/index.html
+++ b/index.html
@@ -947,6 +947,35 @@
                       </div>
                       <div class="col-md-4 mb-4 px-5 px-md-3">
                         <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
+                          <img src="assets/img/arc/cp-html-css.jpg" class="img-fluid rounded-border" alt="">
+                          <div class="portfolio-links">
+                            <a href="assets/img/arc/cp-html-css.jpg" data-gallery="portfolioGallery"
+                              class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">HTML & CSS
+                              <br>
+                              <span class="fs--1 text-gray-100">CODEPOLITAN CERTIFIED</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-4 px-5 px-md-3">
+                        <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
+                          <img src="assets/img/arc/cp-git.jpg" class="img-fluid rounded-border" alt="">
+                          <div class="portfolio-links">
+                            <a href="assets/img/arc/cp-git.jpg" data-gallery="portfolioGallery"
+                              class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">GIT Untuk
+                              Pemula
+                              <br>
+                              <span class="fs--1 text-gray-100">CODEPOLITAN CERTIFIED</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="owl-item active" style="width: 290.667px; margin-right: 20px;">
+                    <div class="row justify-content-center px-lg-5 mb-2">
+                      <div class="col-md-4 mb-4 px-5 px-md-3">
+                        <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
                           <img src="assets/img/arc/bisa-ml-sklearn.jpg" class="img-fluid rounded-border" alt="">
                           <div class="portfolio-links">
                             <a href="assets/img/arc/bisa-ml-sklearn.jpg" data-gallery="portfolioGallery"
@@ -954,18 +983,6 @@
                               dengan Scikit-Learn Python
                               <br>
                               <span class="fs--1 text-gray-100">BISA.AI CERTIFIED</span>
-                            </a>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-md-4 mb-4 px-5 px-md-3">
-                        <div class="portfolio-wrap sd rounded-border btn-animate mt-3">
-                          <img src="assets/img/arc/cp-html-css.jpg" class="img-fluid rounded-border" alt="">
-                          <div class="portfolio-links">
-                            <a href="assets/img/arc/cp-html-css.jpg" data-gallery="portfolioGallery"
-                              class="portfolio-lightbox fs-1 btn-animate" style="text-decoration: none;">HTML & CSS
-                              <br>
-                              <span class="fs--1 text-gray-100">CODEPOLITAN CERTIFIED</span>
                             </a>
                           </div>
                         </div>
