--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,11 @@
                   <i class="bi bi-whatsapp text-white fs-1"></i>
                 </a>
               </li>
+              <li class="list-inline-item btn-animate"><a class="text-decoration-none"
+                  href="https://github.com/mryanafz" target="_blank">
+                  <i class="bi bi-github text-white fs-1"></i>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
