--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
             <p class="fs--1 fs-md-0">Saya Muhammad Ryan
               Afrizal, fresh
               graduete S-1 Ilmu Komputer dari Universitas Lambung Mangkurat. Saya
-              seorang Web Developer, Motion Graphics Designer Graphics Designer dan Video Editor. Saya juga menyukai dan
+              memiliki 2 tahun pengalaman pada bidang Web Development, Motion Graphics Design Graphics Design dan
+              Video Editing. Saya juga menyukai dan
               memiliki minat penelitian
               bidang Data
               Science & Machine Learning.</p>
